internal/xds/translator/testdata/out/xds-ir/local-ratelimit.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route-ratelimit-single-rule
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-match-0
              value: rule-0-match-0
            - key: rule-0-match-1
              value: rule-0-match-1
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 10
              tokensPerFill: 10
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            - headerValueMatch:
                descriptorKey: rule-0-match-1
                descriptorValue: rule-0-match-1
                expectMatch: true
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: foo
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 60s
            maxTokens: 10
            tokensPerFill: 10
    - match:
        path: example
      name: second-route-ratelimit-multiple-rules
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-match-0
              value: rule-0-match-0
            - key: rule-0-match-1
              value: rule-0-match-1
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 10
              tokensPerFill: 10
          - entries:
            - key: rule-1-match-0
              value: rule-1-match-0
            - key: rule-1-match-1
              value: rule-1-match-1
            - key: rule-1-masked-remote-address
              value: 192.168.0.0/16
            tokenBucket:
              fillInterval: 60s
              maxTokens: 10
              tokensPerFill: 10
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            - headerValueMatch:
                descriptorKey: rule-0-match-1
                descriptorValue: rule-0-match-1
                expectMatch: true
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: foo
          - actions:
            - headerValueMatch:
                descriptorKey: rule-1-match-0
                descriptorValue: rule-1-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
            - headerValueMatch:
                descriptorKey: rule-1-match-1
                descriptorValue: rule-1-match-1
                expectMatch: true
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: bar
            - remoteAddressMatch:
                addressMatcher:
                  ranges:
                  - addressPrefix: 192.168.0.0
                    prefixLen: 16
                descriptorKey: rule-1-masked-remote-address
                descriptorValue: 192.168.0.0/16
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 60s
            maxTokens: 10
            tokensPerFill: 10
    - match:
        path: test
      name: third-route-ratelimit-no-rule
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 60s
            maxTokens: 10
            tokensPerFill: 10
